- Added general list of rw locks indexed by name
- Added special methods to JApplication for (un)locking rw lock for ROOT 
- Added SConstruct script for building with scons
- Fix bug that caused calibration tables with >10 columns to place columns
  out of order
- Added CreateParameter method to JParameterManager. Also fixed
  bug where a race condition could occur in SetDefaultParameter

Changes in version 0.6.3

- Added scripts directory along with scripts for creating some
  common classes used in the framework.
- Modified Makefile.lib to work with GNU make 3.82
- Reorganized build system to be closer to classic unix style
- Added jana-config script for easier setting of compiler options
- Fixed bug where early call to JApplication::Quit() didn't stop
  program execution
- Added JANA:BATCH_MODE config. param. to disable certain messages
- Added AUTOACTIVATE config. param. to allow auto-activated factories to
  be specified via configuration file.
- Delay deletion of JFactory objects until after processor's fini methods
  have been called
- Fixed bug where program would seg. fault if an invalid event source 
  was provided
- Fixed problem in TestSpeed plugin where number crunching routine
  was being optimized away.
- Added auto generation of setenv.csh and env.sh scripts
- Cleaned up destruction of objects to allow valgrind to run much cleaner

Changes in version 0.6.2

- Added to force_links.cc to force JObject::GetTag to be linked
- Cleaned up exceptions a bit to (nearly) always throw a JException
  and catch a std::exception
- Modified JCalibration system to support event-level calibration boundaries


Changes in version 0.6.1

- Added optional description string to configuration parameters
- Fixed bug where EVENTS_TO_KEEP actually kept 1 less than specified
- Start all 3 high resolution system timers and use PROF timer for 
  factory call stack accounting
- Added JRawData object to TestSpeed plugin to make it a more
  complete example.